--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin    : 0;
+  padding   : 0;
+  min-height: 100vh;
+}
+
+.app {
+  font-family: sans-serif;
+}
+
+img {
+  max-width: 100%;
+}
+
+.header {
+  display      : grid;
+  align-items  : center;
+  justify-items: center;
+  grid-template-columns:
+    minmax(1em, 1fr) minmax(50px, 100px) minmax(150px, 500px) minmax(1em, 1fr);
+
+  background-color: #4c2196;
+  color           : whitesmoke;
+}
+
+.header-img {
+  grid-column: 2;
+}
+
+.header-title {
+  grid-column: 3 / -2;
+}
+
+.main {
+  min-height: 75vh;
+}
+
+.main-grid {
+  display: grid;
+  grid-template-columns:
+    minmax(1em, 1fr) repeat(2, minmax(100px, 300px)) minmax(1em, 1fr);
+}
+
+.meme-img {
+  grid-column: 2;
+}
+
+.meme-form {
+  grid-column: 3;
 }
